Fixed overflowing demo reel 'button'

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -136,7 +136,7 @@ p {
 }
 
 #name {
-    font-size: 3.5em;
+    font-size: 2.5em;
 }
 
 #type {
